--- a/Memory-game1/css/style.css
+++ b/Memory-game1/css/style.css
@@ -1,64 +1,70 @@
+.card{
+  height: 200px;
+  width: 150px;
+  border: 1px solid black;
+  background-color:yellow;
+  border-radius: 10px;
+  float: left;
+  margin:8%
+}
+
 h1 {
-	color: rgb(2,132,130);
+  color:rgb(2, 132, 130);
+  text-align: center
 }
 
 h2 {
-	color: #ffd700;
+  color: #ffd700;
+  text-align: center
 }
 
-.board {
-	height: 50%;
-	width: 50%;
-	display: inline-block;
-	float: left;
-	margin: 8%;
-}
-
-.card {
-	height: 200px;
-	width: 150px;
-	border: 1px;
-	border-style: solid;
-	border-radius: 10px;
-	margin: 8%;
-	float: left;
-	border-color: #000000;
-	background-color: yellow;
+p{
+  text-align: center
 }
 
 .name {
-	color: #ff0000;
+  color: #ff0000;
+}
+
+.board {
+  height: 80%;
+  width: 50%;
+  display: inline-block;
 }
 
 nav {
-	background: #808080;
-}
+  background-color: #808080;
+      }
 
-nav a {
-	background-color: #ffbf00;
-	color: white;
-	padding: 35px;
-	display: block;
-	float: left;
-}
+a {
+        background-color: #ffbf00;
+        color: white;
+        text-decoration: none;
+        display: block;
+        float: left;
+        padding: 35px;
+      }
 
 a:hover {
-	background-color: #ee5f3c;
-}
-
-footer {
-	background-color: #808080;
-}
-
-header, footer, p {
-	align-content: center;
-}
+        background-color: #ee5f3c;
+      }
 
 .clearfix:after {
-	visibility: hidden;
-	display: block;
-	content: " ";
-	clear: both;
-	height: 0;
-	font-size: 0;
+        visibility: hidden;
+        display: block;
+        content: " ";
+        clear: both;
+        height: 0;
+        font-size: 0;
+      }
+
+footer {
+  background-color: #808080;
+  text-align: center;
+}
+
+
+img {
+	height: 200px;
+  width: 150px;
 }
